--- a/template/favorites/favorites.html
+++ b/template/favorites/favorites.html
@@ -1,4 +1,10 @@
-<ion-view  id="page2" class="bar-positive"  title="Favorites" ng-controller="favoritesCtrl as fvm">
+<!-- <ion-view  id="page2" class=""  title="Favorites" ng-controller="favoritesCtrl as fvm"> -->
+  <ion-view ng-controller="favoritesCtrl as fvm">
+  <ion-nav-title>
+    <center>
+      Favorites
+    </center>
+  </ion-nav-title>
   <ion-header-bar>
     <div class="buttons">
       <input type="button" class="button button-icon icon ion-ios-minus-outline"
