--- a/template/menu.html
+++ b/template/menu.html
@@ -1,36 +1,37 @@
 <ion-side-menus enable-menu-with-back-views="false">
     <ion-side-menu-content>
+
         <ion-nav-bar class="bar-stable">
-            <ion-nav-back-button></ion-nav-back-button>
+            <ion-nav-back-button ></ion-nav-back-button>
             <ion-nav-buttons side="left">
                 <button class="button button-icon button-clear ion-navicon" menu-toggle="left"></button>
             </ion-nav-buttons>
         </ion-nav-bar>
+        <!-- <ion-nav-view name="fabContent"></ion-nav-view> -->
         <ion-nav-view name="side-menu21"></ion-nav-view>
     </ion-side-menu-content>
     <ion-side-menu side="left" id="side-menu21" expose-aside-when="large" >
-      <ion-header-bar style=" background-color:violet;">
-
-      </ion-header-bar>
-        <ion-content padding="false" class="side-menu-left has-header">
-            <ion-list id="menu-list3" class=" ">
-                <ion-item class="menu-style" style="height:200px;background-color:violet">
-              </ion-item>
-                <ion-item class="item-icon-right  " id="menu-list-item0" ui-sref="menu.home" menu-close>Home
-                    <i class="icon ion-android-home"></i>
-                </ion-item>
-                <ion-item class="item-icon-right  " id="menu-list-item1" ui-sref="menu.bookIndex" menu-close>Index
+        <ion-header-bar class="dark-bg expanded" style="background: url('img/profile-bg.jpg'); background-size: cover;">
+        </ion-header-bar>
+        <ion-content style="background-color:#888;" class="stable-bg has-expanded-header" padding="false" class="side-menu-left has-header">
+            <ion-list id="menu-list3" class=" " style="background-color:#888;" >
+                <ion-item style="background-color:#888;" class="item-icon-right menu-item " id="menu-list-item1" ui-sref="menu.bookIndex" menu-close>Index
                     <i class="icon ion-ios-book"></i>
                 </ion-item>
-                <ion-item class="item-icon-right  " id="menu-list-item2" ui-sref="menu.search" menu-close>Search
+                <ion-item style="background-color:#888;" class="item-icon-right  " id="menu-list-item2" ui-sref="menu.search" menu-close>Search
                     <i class="icon ion-search"></i>
                 </ion-item>
-                <ion-item class="item-icon-right  " id="menu-list-item3" ui-sref="menu.favorites" menu-close>Favorites
+                <ion-item style="background-color:#888;" class="item-icon-right  " id="menu-list-item3" ui-sref="menu.favorites" menu-close>Favorites
                     <i class="icon ion-heart"></i>
                 </ion-item>
-                <ion-item class="item-icon-right  " id="menu-list-item4" ui-sref="menu.categories" menu-close>Categories
+                <ion-item style="background-color:#888;" class="item-icon-right  " id="menu-list-item4" ui-sref="menu.categories" menu-close>Categories
                     <i class="icon ion-ios-pricetag"></i>
                 </ion-item>
+                <!--
+                <ion-item class="item-icon-right  " id="menu-list-item0" ui-sref="menu.home" menu-close>Dashboard
+                    <i class="icon ion-android-home"></i>
+                </ion-item>
+                <!--  -->
             </ion-list>
         </ion-content>
     </ion-side-menu>
