--- a/template/bookIndex/verseIndex.html
+++ b/template/bookIndex/verseIndex.html
@@ -6,7 +6,7 @@
     </center>
   </ion-nav-title>
   <ion-nav-buttons side="right">
-      <input type="button" value="Next" ng-click="vm.gotoNextChapter()"></input>
+      <input type="button" class="cancel" value="Next" ng-click="vm.gotoNextChapter()"></input>
   </ion-nav-buttons>
     <ion-content padding="true" class="has-header">
         <ion-list ng-init="vm.getVerses(vm.bookId, vm.chapId)"
