--- a/template/favorites/favorites.html
+++ b/template/favorites/favorites.html
@@ -1,7 +1,7 @@
 <!-- <ion-view  id="page2" class=""  title="Favorites" ng-controller="favoritesCtrl as fvm"> -->
   <ion-view ng-controller="favoritesCtrl as fvm">
   <ion-nav-title>
-    <center>
+    <center class="center">
       Favorites
     </center>
   </ion-nav-title>
