--- a/template/menu.html
+++ b/template/menu.html
@@ -7,28 +7,28 @@
                 <button class="button button-icon button-clear ion-navicon" menu-toggle="left"></button>
             </ion-nav-buttons>
         </ion-nav-bar>
-        <!-- <ion-nav-view name="fabContent"></ion-nav-view> -->
-        <ion-nav-view name="side-menu21"></ion-nav-view>
+        <ion-nav-view name="side-menu21" ></ion-nav-view>
     </ion-side-menu-content>
     <ion-side-menu side="left" id="side-menu21" expose-aside-when="large" >
         <ion-header-bar class="dark-bg expanded" style="background: url('img/profile-bg.jpg'); background-size: cover;">
         </ion-header-bar>
-        <ion-content style="background-color:#888;" class="stable-bg has-expanded-header" padding="false" class="side-menu-left has-header">
-            <ion-list id="menu-list3" class=" " style="background-color:#888;" >
-                <ion-item style="background-color:#888;" class="item-icon-right menu-item " id="menu-list-item1" ui-sref="menu.bookIndex" menu-close>Index
+        <ion-content style="background-color:snow;" class="stable-bg has-expanded-header" padding="false" class="side-menu-left has-header">
+            <ion-list id="menu-list3" class=" " style="background-color:snow;" >
+                <ion-item style="background-color:silver;" class="item-icon-right menu-item " id="menu-list-item1" ui-sref="menu.bookIndex" menu-close>Index
                     <i class="icon ion-ios-book"></i>
                 </ion-item>
-                <ion-item style="background-color:#888;" class="item-icon-right  " id="menu-list-item2" ui-sref="menu.search" menu-close>Search
+                <ion-item style="background-color:silver;" class="item-icon-right  " id="menu-list-item2" ui-sref="menu.search" menu-close>Search
                     <i class="icon ion-search"></i>
                 </ion-item>
-                <ion-item style="background-color:#888;" class="item-icon-right  " id="menu-list-item3" ui-sref="menu.favorites" menu-close>Favorites
+                <ion-item style="background-color:silver;" class="item-icon-right  " id="menu-list-item3" ui-sref="menu.favorites" menu-close>Favorites
                     <i class="icon ion-heart"></i>
                 </ion-item>
-                <ion-item style="background-color:#888;" class="item-icon-right  " id="menu-list-item4" ui-sref="menu.categories" menu-close>Categories
+                <ion-item style="background-color:silver;" class="item-icon-right  " id="menu-list-item4" ui-sref="menu.categories" menu-close>Categories
                     <i class="icon ion-ios-pricetag"></i>
                 </ion-item>
                 <!--
-                <ion-item class="item-icon-right  " id="menu-list-item0" ui-sref="menu.home" menu-close>Dashboard
+                <ion-item class="item-icon-right  " id="menu-list-item0" ui-sref="menu.home" menu-close>
+                    Dashboard
                     <i class="icon ion-android-home"></i>
                 </ion-item>
                 <!--  -->
