--- a/css/style.css
+++ b/css/style.css
@@ -10,3 +10,52 @@ background: transparent;
 .item a.item-content{
   background-color:transparent; !important
 }
+ion-content{
+  background-color:silver;
+}
+.chip {
+    display: inline-block;
+    padding: 0 10px;
+    height: 50px;
+    font-size: 16px;
+    line-height: 50px;
+    border-radius: 25px;
+    background-color: skyblue;
+    margin:5px;
+}
+.chip .tag{
+      float: left;
+      margin: 5px 10px 0 -5px;
+      height: 40px;
+      width: 40px;
+      border-radius: 50%;
+      background-color: dodgerblue;
+}
+.chip .tag h2{
+  text-align: center;
+  font-size:x-large;
+  margin-top:5px;
+  color:snow;
+}
+
+#categories-list-item13 div.item-content.ng-binding {
+    background-color: snow;
+}
+.item-complex.item-icon-right .item-content {
+    padding-right: 54px;
+    background-color: snow;
+}
+.list .item {
+    border: none;
+    min-height: 48px;
+    text-align: left;
+    background-color: snow;
+}
+.cancel {
+    right: 20px;
+    background-color: skyblue;
+    padding-right: 7px;
+    /* top: 20px; */
+    border: none;
+    border-radius: 5px;
+    margin: 7px 17px 3px 5px;
