--- a/template/search/search.html
+++ b/template/search/search.html
@@ -1,4 +1,10 @@
-<ion-view title="search" id="page1" class=" " ng-controller="searchCtrl as vm">
+<!-- <ion-view title="search" id="page1" class=" " ng-controller="searchCtrl as vm"> -->
+  <ion-view ng-controller="searchCtrl as vm">
+  <ion-nav-title>
+    <center class="center">
+    Search  
+    </center>
+  </ion-nav-title>
     <ion-content padding="true" class="has-header">
         <form id="search-form1" class="list row">
             <label class="item item-select col-33" id="search-select1">
