--- a/template/categories/categories.html
+++ b/template/categories/categories.html
@@ -21,10 +21,9 @@
                 <ion-delete-button style="box-shadow:none;" class="ion-minus-circled" ng-click="vm.deleteCategory(cat)"></ion-delete-button>
             </ion-item>
         </ion-list>
-        <a ui-sref="menu.addCategory"
-        style="position:absolute;bottom:10px;right:10px;z-index:9999"
-        class="">
-          <i class="material-icons">+</i>
-        </a>
     </ion-content>
+    <button ui-sref="menu.addCategory"
+class="button button-fab button-fab-bottom-right button-energized-900" style="background-color:deepskyblue;">
+<i class="icon ion-ios-pricetag"></i>
+</button
 </ion-view>
