--- a/css/style.css
+++ b/css/style.css
@@ -16,9 +16,9 @@ ion-content{
 .chip {
     display: inline-block;
     padding: 0 10px;
-    height: 50px;
-    font-size: 16px;
-    line-height: 50px;
+    height: 30px;
+    font-size: 12px;
+    line-height: 30px;
     border-radius: 25px;
     background-color: skyblue;
     margin:5px;
@@ -26,15 +26,15 @@ ion-content{
 .chip .tag{
       float: left;
       margin: 5px 10px 0 -5px;
-      height: 40px;
-      width: 40px;
+      height: 20px;
+      width: 20px;
       border-radius: 50%;
       background-color: dodgerblue;
 }
 .chip .tag h2{
   text-align: center;
-  font-size:x-large;
-  margin-top:5px;
+  font-size:large;
+  /*margin-top:5px;*/
   color:snow;
 }
 
