--- a/template/bookIndex/verse-detail.html
+++ b/template/bookIndex/verse-detail.html
@@ -6,7 +6,7 @@
     <ion-content  class=" ">
 <!-- hero section -->
         <div class="row item" style="display:flex;flex-direction:column;height:43%;background: url('img/profile-bg.jpg'); background-size: cover;">
-          <h2 class="" style="font-size:x-large;margin-top: 55%;color:#fff;">{{vm.bookId}} {{vm.chapId}} : {{vm.verse}}</h2>
+          <h2 class="" style="font-size:x-large;color:#fff;position:absolute;top:80%;left:5%;">{{vm.bookId}} {{vm.chapId}} : {{vm.verse}}</h2>
         <button  ng-class={button-energized-900:vm.verseDetail.isliked} ng-click="vm.toggleLike()"
         class="button button-fab button-fab-bottom-right ">
           <i class="icon ion-heart"></i></button>
