--- a/template/bookIndex/bookIndex.html
+++ b/template/bookIndex/bookIndex.html
@@ -5,7 +5,7 @@
       Bible Index
     </center>
   </ion-nav-title>
-    <ion-content padding="true" class="has-header">
+    <ion-content  class="has-header">
         <ion-list  id="bookIndex" class=" " >
             <ion-item ng-repeat="bk in vm.bookList track by $index" class="item-icon-right  " id="bookSearchResults-list-item16" ui-sref="menu.chapterIndex({book:bk})">
               {{bk}}
