--- a/template/bookIndex/edit-verse.html
+++ b/template/bookIndex/edit-verse.html
@@ -2,7 +2,7 @@
   <ion-header-bar title="Edit {{vm.bookId}} {{vm.chapId}} {{vm.verse}}">
 
 </ion-header-bar>
-    <ion-content padding="true" class="has-header">
+    <ion-content  class="has-header">
         <form id="editVerse-form2" class="list ">
             <ion-toggle toggle-class="toggle-positive"
             id="editVerse-toggle1" class=" ">Like/Unlike</ion-toggle>
