--- a/template/categories/add-category.html
+++ b/template/categories/add-category.html
@@ -1,5 +1,5 @@
 <ion-view title="Add Category" id="page8" class=" " ng-controller="addCategoryCtrl as vm">
-    <ion-content padding="true" class="has-header">
+    <ion-content  class="has-header">
         <form id="addCategory-form3" class="list ">
             <label class="item item-input " id="addCategory-input3">
                 <input type="text" placeholder="Category Name ..." ng-model="vm.catName">
