--- a/template/categories/categories.html
+++ b/template/categories/categories.html
@@ -8,7 +8,7 @@
     <ion-nav-buttons side="right">
       <ion-toggle style="padding: 0px 30px;border: none;background: transparent;" ng-model="vm.showDelete"></ion-toggle>
   </ion-nav-buttons>
-    <ion-content padding="true" class="">
+    <ion-content  class="">
       <ion-refresher
         pulling-text="Pull to refresh..."
         on-refresh="vm.doRefresh()">
