--- a/template/search/book-search-results.html
+++ b/template/search/book-search-results.html
@@ -1,5 +1,5 @@
 <ion-view title="{{vm.bookId}} {{vm.chapId}}" id="page7" class=" " ng-controller="bookSearchResultsCtrl as vm">
-    <ion-content padding="true" class="has-header">
+    <ion-content  class="has-header">
         <ion-list ng-init=""
         id="bookSearchResults-list5" class=" " >
             <!-- ui-sref passes parameters to next page-->
