--- a/template/search/search.html
+++ b/template/search/search.html
@@ -2,10 +2,10 @@
   <ion-view ng-controller="searchCtrl as vm">
   <ion-nav-title>
     <center class="center">
-    Search  
+    Search
     </center>
   </ion-nav-title>
-    <ion-content padding="true" class="has-header">
+    <ion-content  class="has-header">
         <form id="search-form1" class="list row">
             <label class="item item-select col-33" id="search-select1">
                 <span class="input-label">Book</span>
