--- a/template/bookIndex/verseIndex.html
+++ b/template/bookIndex/verseIndex.html
@@ -8,7 +8,7 @@
   <ion-nav-buttons side="right">
       <input type="button" class="cancel" value="Next" ng-click="vm.gotoNextChapter()"></input>
   </ion-nav-buttons>
-    <ion-content padding="true" class="has-header">
+    <ion-content  class="has-header">
         <ion-list ng-init="vm.getVerses(vm.bookId, vm.chapId)"
         id="bookSearchResults-list5" class=" " >
             <!-- ui-sref passes parameters to next page-->
