--- a/template/categories/category-detail.html
+++ b/template/categories/category-detail.html
@@ -8,7 +8,7 @@
     <ion-nav-buttons side="right">
       <ion-toggle style="padding: 0px 30px;border: none;background: transparent;" ng-model="cvm.showDelete"></ion-toggle>
   </ion-nav-buttons>
-    <ion-content padding="true" class="has-header">
+    <ion-content  class="has-header">
       <ion-list ng-init="cvm.getVerses(cvm.word)"
         id="bookSearchResults-list5" class=" "
         style=""
