--- a/template/categories/edit-category.html
+++ b/template/categories/edit-category.html
@@ -1,5 +1,5 @@
 <ion-view title="edit-category" id="page10" class=" " ng-controller="categoriesCtrl as vm">
-    <ion-content padding="true" class="has-header">
+    <ion-content  class="has-header">
         <form id="editCategory-form4" class="list ">
             <label class="item item-select " id="search-select1">
                 <span class="input-label">Category</span>
