--- a/template/favorites/favorites.html
+++ b/template/favorites/favorites.html
@@ -11,7 +11,7 @@
       ng-click="fvm.showDelete = !fvm.showDelete"></input>
     </div>
   </ion-header-bar>
-    <ion-content padding="true" class="has-header">
+    <ion-content  class="has-header">
       <ion-refresher
         pulling-text="Pull to refresh..."
         on-refresh="fvm.doRefresh()">
