--- a/template/search/search.html
+++ b/template/search/search.html
@@ -6,43 +6,30 @@
     </center>
   </ion-nav-title>
     <ion-content  class="has-header">
-        <form id="search-form1" class="list row">
-            <label class="item item-select col-33" id="search-select1">
+        <div id="search-dropdown" class=" row">
+            <label class="item item-select " id="search-select1">
                 <span class="input-label">Book</span>
                 <select ng-init="vm.getBooks()" ng-model="vm.bookId"
                 ng-options="book as book for book in vm.bookList" ng-change="vm.getChaps(vm.bookId)">
                 </select>
             </label>
-            <label class="item item-select col-33" id="search-select2">
+            <label class="item item-select " id="search-select2">
                 <span class="input-label">Chapter</span>
                 <select ng-init="vm.getChaps(vm.bookId)" ng-model="vm.chapId" ng-change="vm.print()"
                 ng-options="ch as ch for ch in vm.chapList">
                 </select>
             </label>
-            <button ng-disabled="(vm.bookId && vm.chapId) ? false: true"
-            ui-sref="menu.verseIndex({book:vm.bookId,chap:vm.chapId})" id="search-button8"
-            class="col-33 button button-positive  button-block ">Verse search</button>
 
-        </form>
-        <form class="row">
+        </div>
+        
+<button ng-disabled="(vm.bookId && vm.chapId) ? false: true"
+            ui-sref="menu.verseIndex({book:vm.bookId,chap:vm.chapId})" id="search-button8"
+            class=" button button-positive  button-block ">Verse search</button>
+        <form id="searchbar" class="row">
             <label class="col-66 item item-input">
                     <i class="icon ion-search placeholder-icon"></i>
                     <input type="search" placeholder="Search Term" ng-model="vm.word">
             </label>
-            <!--
-            <label>
-            <input type="radio"  value="Entire Bible" ng-model="vm.searchAllBible" checked="true">
-            Entire Bible
-          </label>
-            <label>
-            <input type="radio"  value="New Testament" ng-model="vm.searchNewTestament">
-            New Testament
-          </label>
-            <label>
-            <input type="radio"  value="Old Testament" ng-model="vm.searchOldTestament">
-            Old Testament
-          </label>
-          <!--  -->
             <button ng-disabled="!vm.word" ui-sref="menu.wordSearchResults({term:vm.word})" id="search-button4" class="col-33 button button-positive  button-block ">Word search</button>
         </form>
     </ion-content>
