--- a/template/bookIndex/bookIndex.html
+++ b/template/bookIndex/bookIndex.html
@@ -7,8 +7,8 @@
   </ion-nav-title>
     <ion-content  class="has-header">
         <ion-list  id="bookIndex" class=" " >
-            <ion-item ng-repeat="bk in vm.bookList track by $index" class="item-icon-right  " id="bookSearchResults-list-item16" ui-sref="menu.chapterIndex({book:bk})">
-              {{bk}}
+            <ion-item ng-repeat="bk in vm.bookList track by $index" class="item-icon-right" id="bookSearchResults-list-item16" ui-sref="menu.chapterIndex({book:bk})">
+              <span class="amasis" style="font-size:20px;">{{bk}}</span>
                 <i class="icon ion-android-arrow-forward"></i>
             </ion-item>
 
