--- a/template/categories/category-detail.html
+++ b/template/categories/category-detail.html
@@ -25,7 +25,7 @@
             </ion-list-header>
              <ion-item style="">
                 <ion-delete-button class="ion-minus-circled" ng-click="cvm.deleteCategoryItem(ver.vid)"></ion-delete-button>
-              <p>{{ver.text}}</p>
+              <p class="amasis">{{ver.text}}</p>
               </ion-item>
               <ion-item style=""></ion-item>
          </div>
