--- a/template/bookIndex/verseIndex.html
+++ b/template/bookIndex/verseIndex.html
@@ -18,7 +18,7 @@
               <p style="display:inline-block; padding-right:10px; display:table-cell;">
                   {{ver.verse}}
               </p>
-               <div style="display:table-cell">{{ver.text}}</div>
+               <div class="amasis" style="display:table-cell">{{ver.text}}</div>
                <i ng-click="vm.openModal(ver.verse)" class="positive icon ion-android-more-vertical">
               </i>
          </ion-item>
