--- a/template/favorites/favorites.html
+++ b/template/favorites/favorites.html
@@ -28,7 +28,7 @@
                 <i  ng-click="fvm.openModal(ver.vid)" class="icon positive ion-more col-50"></i>
             </ion-list-header>
               <ion-item class="" style="">
-             <p>{{ver.text}}</p>
+             <p class="amasis">{{ver.text}}</p>
            </ion-item>
               <ion-item style=""></ion-item>
          </div>
