--- a/css/style.css
+++ b/css/style.css
@@ -189,3 +189,8 @@ i.icon.ion-search.placeholder-icon{
 #bookSearchResults-list-item16 p{
   font-size:13px;
 }
+div#verseDetailBackground{
+  display:flex;flex-direction:column;
+  height:43%;
+  /*background: url('img/profile-bg.jpg'); background-size: cover;*/
+}
